fix: centered modal and hide overflow

--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.50);
 }
 
